# spade-experiments

./: .gitattributes  .gitignore  README.md  pipeline.ipynb  pyproject.toml  taxonomy_labels.csv  vllm_mixtral.py
autolabeling/: combined_output.html  index.js  index.ts  output.txt  package-lock.json  package.json
evalgen_experiments/medical/: assertion_res_df5a56ce3939dea620d3bcb3ec46807c354cb73514ec8439d4361f47489d22bf.csv  assertion_res_ec177d9afef45755c308b2a41da9080ac986223fbc9814648db4fb6c99053c8d.csv  candidate_assertions.py  optimizer_input.pkl  prompt_templates.py  run_pipeline.ipynb  subsumption_results.csv
evalgen_experiments/product/: assertion_res_082e9b8b136b215a0e98a3a78e867789f01711fc94f3e8d10e76a8ff1a01cedc.csv  candidate_assertions.py  optimizer_input.pkl  prompt_templates.py  run_pipeline.ipynb  subsumption_results.csv
paper_experiments/: get_ilp_runtimes.ipynb
paper_experiments/codereviews/: assertion_res_c26484e8b8cb09a62f72d2fa70de3ef466a5a4381bdabe91d0805ceb3eb2929f.csv  candidate_assertions.py  examples.py  labeled_responses.csv  optimizer_input.pkl  optimizer_results.pkl  prompt_templates.py  run_pipeline.ipynb  subsumption_results.csv
paper_experiments/emails/: assertion_res_708745a02507792e97af42276e37c8bce60cab0941459f2dd5bdfc16ae102df5.csv  candidate_assertions.py  examples.py  labeled_responses.csv  optimizer_input.pkl  optimizer_results.pkl  prompt_templates.py  (+2 more)
spade/: candidate_gen.py  execute_assertions.py  label_results.py  optimizer.py
spade_v3/: assertion_gen.py  candidate_gen.py  execute_assertions.py  optimizer.py
(+89 files in other folders)
