[tool.poetry]
name = "spade"
version = "0.1.0"
description = "Suggesting evals by analyzing deltas in consecutive prompt versions."
authors = ["Shreya Shankar <ss.shankar505@gmail.com>"]
readme = "README.md"
packages = [{include = "spade"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
requests = "^2.31.0"
click = "^8.1.7"
pandas = "^2.1.1"
tabulate = "^0.9.0"
litellm = "^1.13.2"
langfuse = "^1.14.0"
nltk = "^3.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
